[gd_scene load_steps=36 format=3 uid="uid://bx2b51ttrbn61"]

[ext_resource type="Script" uid="uid://jkwbm04vow2r" path="res://game/scenes/interactables/computer/computer.gd" id="1_p1nu0"]
[ext_resource type="Script" uid="uid://ddrpdsdq2ph2c" path="res://game/scripts/object_components/powered.gd" id="2_u75lo"]
[ext_resource type="Script" uid="uid://dhosadsustkwj" path="res://assets/data_resource/data_base.gd" id="2_ueu40"]
[ext_resource type="Resource" uid="uid://bov4cb2qxkavv" path="res://assets/data_resource/emails/email_01.tres" id="3_rvx23"]
[ext_resource type="PackedScene" uid="uid://ciw14m13fy8j6" path="res://game/scenes/interactables/keypad/screen_camera.tscn" id="3_vta66"]
[ext_resource type="Theme" uid="uid://dtej56pljgyf2" path="res://assets/ui_theme/temp_theme.tres" id="4_8avqq"]
[ext_resource type="Resource" uid="uid://bnd764qolm8i8" path="res://assets/data_resource/emails/email_02.tres" id="4_mdl6y"]
[ext_resource type="Script" uid="uid://dy8jsoeel5q2w" path="res://game/scenes/interactables/computer/computer_screen.gd" id="4_pvfo8"]
[ext_resource type="Script" uid="uid://dsphq135iat4" path="res://game/scenes/interactables/computer/computer_ui.gd" id="5_hfvqs"]
[ext_resource type="FontFile" uid="uid://csnmcna6ln5mk" path="res://assets/fonts/Ethnocentric Rg.otf" id="5_yy4wl"]
[ext_resource type="Shader" uid="uid://dpt2c6c5u62ic" path="res://assets/shaders/crt_vhs.gdshader" id="7_mfk8i"]
[ext_resource type="AudioStream" uid="uid://c8ap70ijjomlr" path="res://assets/audio/sfx/screen_sounds/keypad_clicked.wav" id="12_aavmf"]
[ext_resource type="AudioStream" uid="uid://dba6xp5w6g5bw" path="res://assets/audio/sfx/screen_sounds/keypad_right.wav" id="13_0opb2"]
[ext_resource type="AudioStream" uid="uid://bxfachiwa7sgu" path="res://assets/audio/sfx/screen_sounds/keypad_wrong.wav" id="14_630lo"]
[ext_resource type="Script" uid="uid://eg80h0wm1d77" path="res://game/scenes/interactables/keypad/rotating_mesh.gd" id="15_vluvv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b41tm"]
size = Vector3(1.2, 1.2, 1.13076)

[sub_resource type="BoxMesh" id="BoxMesh_rft0r"]

[sub_resource type="BoxMesh" id="BoxMesh_4r3aa"]
size = Vector3(0.8, 0.8, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p1jef"]
albedo_color = Color(0, 0, 0.1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_00a5y"]
size = Vector2(16, 9)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1vegq"]
shader = ExtResource("7_mfk8i")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.02
shader_parameter/grille_opacity = 0.15
shader_parameter/resolution = Vector2(1920, 1080)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 1.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.01
shader_parameter/noise_opacity = 0.4
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.15
shader_parameter/aberration = 0.01
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = true
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vekxg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_emrgm"]
bg_color = Color(0, 1, 0.716667, 0.827451)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_gvmem"]
thickness = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j5kst"]
bg_color = Color(0, 1, 0.717647, 0.501961)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_j54b5"]
color = Color(0, 1, 0.717647, 1)
thickness = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c0mnm"]
bg_color = Color(1.73271e-06, 0.392434, 0.272188, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ta05m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aapcf"]
bg_color = Color(8.90419e-07, 0.311027, 0.213066, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xtcte"]
bg_color = Color(0, 1, 0.718, 0.313)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="BoxShape3D" id="BoxShape3D_ayswv"]
size = Vector3(16.1934, 9.1889, 1)

[sub_resource type="AudioStreamInteractive" id="AudioStreamInteractive_68bho"]
clip_count = 3
clip_0/name = &"Keypad Clicked"
clip_0/stream = ExtResource("12_aavmf")
clip_0/auto_advance = 0
clip_1/name = &"Keypad Right"
clip_1/stream = ExtResource("13_0opb2")
clip_1/auto_advance = 0
clip_2/name = &"Keypad Wrong"
clip_2/stream = ExtResource("14_630lo")
clip_2/auto_advance = 0

[sub_resource type="FontFile" id="FontFile_qshau"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_b1d7v"]
transparency = 1
no_depth_test = true
albedo_color = Color(0, 1, 0.718, 0.6)
emission = Color(0, 1, 0.717647, 1)

[sub_resource type="BoxMesh" id="BoxMesh_x0dpi"]
material = SubResource("StandardMaterial3D_b1d7v")
flip_faces = true
size = Vector3(0.1, 0.1, 0.1)

[node name="Computer" type="StaticBody3D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_p1nu0")
login_password = "1234"
data_array = Array[ExtResource("2_ueu40")]([ExtResource("3_rvx23"), ExtResource("4_mdl6y")])

[node name="Powered" type="Node" parent="."]
script = ExtResource("2_u75lo")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0346192)
shape = SubResource("BoxShape3D_b41tm")

[node name="ComputerMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_rft0r")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ComputerMesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.463621)
mesh = SubResource("BoxMesh_4r3aa")
surface_material_override/0 = SubResource("StandardMaterial3D_p1jef")

[node name="ScreenCamera" parent="." instance=ExtResource("3_vta66")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.143308)
clmp = 1

[node name="ComputerScreen" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0.565356)
mesh = SubResource("QuadMesh_00a5y")
script = ExtResource("4_pvfo8")

[node name="SubViewport" type="SubViewport" parent="ComputerScreen"]
unique_name_in_owner = true
transparent_bg = true
size = Vector2i(1920, 1080)
size_2d_override_stretch = true

[node name="MenuEffect" type="ColorRect" parent="ComputerScreen/SubViewport"]
material = SubResource("ShaderMaterial_1vegq")
custom_minimum_size = Vector2(600, 800)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
mouse_default_cursor_shape = 2

[node name="Control" type="Control" parent="ComputerScreen/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_8avqq")
script = ExtResource("5_hfvqs")

[node name="ColorRect" type="ColorRect" parent="ComputerScreen/SubViewport/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.219608, 0.156863, 1)

[node name="Email" type="MarginContainer" parent="ComputerScreen/SubViewport/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ComputerScreen/SubViewport/Control/Email"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer2" type="HBoxContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer"]
layout_mode = 2

[node name="PageHeader" type="Label" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 80
text = "JOHN DOE"

[node name="VSeparator" type="VSeparator" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 100
theme_override_styles/separator = SubResource("StyleBoxEmpty_vekxg")

[node name="Panel" type="Panel" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer2/VSeparator"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -7.0
offset_top = 14.0
offset_right = 8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_emrgm")

[node name="PageHeader2" type="Label" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 80
text = "EMAIL"

[node name="HSeparator" type="HSeparator" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_gvmem")

[node name="HBoxContainer" type="HBoxContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 700)
layout_mode = 2

[node name="EmailTitleContainer" type="VBoxContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MessageTitle" type="Label" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 32
text = "RESOURCE TEXT TITLE"

[node name="Panel" type="Panel" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j5kst")

[node name="MessageDate" type="Label" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 32
text = "DATE"

[node name="Panel" type="Panel" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(1400, 700)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MessageBody" type="Label" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer/HBoxContainer/VBoxContainer2/Panel/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 32
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
autowrap_mode = 1

[node name="ReturnButton" type="Button" parent="ComputerScreen/SubViewport/Control/Email/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 48
text = "RETURN"

[node name="Login" type="Control" parent="ComputerScreen/SubViewport/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ComputerScreen/SubViewport/Control/Login"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ComputerScreen/SubViewport/Control/Login/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 80
text = "Login"

[node name="HSeparator" type="HSeparator" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_j54b5")

[node name="HBoxContainer" type="HBoxContainer" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="Label" type="Label" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 64
text = "Pass:"

[node name="TextEdit" type="LineEdit" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/selection_color = Color(0, 1, 0.717647, 1)
theme_override_colors/caret_color = Color(0, 1, 0.717647, 1)
theme_override_colors/font_placeholder_color = Color(0, 1, 0.717647, 1)
theme_override_colors/font_color = Color(0, 1, 0.717647, 1)
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 64
theme_override_styles/focus = SubResource("StyleBoxFlat_c0mnm")
theme_override_styles/read_only = SubResource("StyleBoxFlat_ta05m")
theme_override_styles/normal = SubResource("StyleBoxFlat_aapcf")
alignment = 1
max_length = 4

[node name="EnterButton" type="Button" parent="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_pressed_color = Color(0, 1, 0.717647, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0.717647, 1)
theme_override_fonts/font = ExtResource("5_yy4wl")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_xtcte")
text = "Enter"

[node name="Area3D" type="Area3D" parent="ComputerScreen"]
unique_name_in_owner = true
collision_mask = 0
input_capture_on_drag = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="ComputerScreen/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0246584, 0.0196838, 0)
shape = SubResource("BoxShape3D_ayswv")

[node name="OmniLight3D" type="OmniLight3D" parent="ComputerScreen"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 1.7308)
light_color = Color(0, 1, 0.717647, 1)
light_energy = 0.1
omni_range = 1.0
omni_attenuation = 0.6

[node name="ComputerAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamInteractive_68bho")
volume_db = -15.0
bus = &"UI"

[node name="VisorText" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.479891, 0.775525)
layers = 1024
billboard = 1
no_depth_test = true
texture_filter = 0
render_priority = 1
modulate = Color(0, 1, 0.717647, 1)
outline_modulate = Color(5.77569e-07, 0.210334, 0.139322, 1)
text = "<console detected>"
font = SubResource("FontFile_qshau")
outline_size = 2
vertical_alignment = 2

[node name="VisorCube" type="MeshInstance3D" parent="VisorText"]
transform = Transform3D(0.707107, -0.707107, 0, 0.5, 0.5, -0.707107, 0.5, 0.5, 0.707107, 0, -0.0707977, 0)
layers = 1024
sorting_offset = 15.0
mesh = SubResource("BoxMesh_x0dpi")
script = ExtResource("15_vluvv")

[connection signal="interacted" from="." to="." method="_on_interacted"]
[connection signal="pressed" from="ComputerScreen/SubViewport/Control/Email/VBoxContainer/ReturnButton" to="ComputerScreen/SubViewport/Control" method="_on_return_button_pressed"]
[connection signal="text_changed" from="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="ComputerScreen/SubViewport/Control" method="_on_text_edit_text_changed"]
[connection signal="text_submitted" from="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer/HBoxContainer/TextEdit" to="ComputerScreen/SubViewport/Control" method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="ComputerScreen/SubViewport/Control/Login/Panel/MarginContainer/VBoxContainer/EnterButton" to="ComputerScreen/SubViewport/Control" method="_on_enter_button_pressed"]
